Fix display on small non-Safari

--- a/css/mth.css
+++ b/css/mth.css
@@ -117,16 +117,12 @@ div.tijdelijkGesloten {
   height: 180px;
   width: 30%;
   margin: -110px 0 -70px 35%;
-  max-width: 30%;
-  max-height: 30%;
 }
 @media (min-width: 768px)  {
   div.tijdelijkGesloten {
     height: 200px;
     width: 200px;
     margin: -220px 0 20px 250px;
-    max-width: 100%;
-    max-height: 100%;
   }
 }
 @media (min-width: 992px) {
